# TraceTree

./: .gitignore  AGENTS.md  QWEN.md  README.md  cli.py  ingest_malwarebazaar.py  pyproject.toml  setup.py  test_mcp_sandbox_injection.py
.jules/: bolt.md  sentinel.md
.qoder/repowiki/en/content/: API Reference.md  Contributing and Development.md  Deployment and Operations.md  Getting Started.md  Testing and Validation.md  Troubleshooting and FAQ.md
.qoder/repowiki/en/content/CLI Commands Reference/: CLI Commands Reference.md  cascade-check Command.md  cascade-train Command.md  cascade-update Command.md  cascade-watch Command.md
.qoder/repowiki/en/content/Configuration and Customization/: Configuration and Customization.md  Environment Settings.md  Model Configuration.md  Signature Definitions.md
.qoder/repowiki/en/content/Detection Systems/: Behavioral Signatures.md  Detection Systems.md  Graph-Based Analysis.md  Temporal Pattern Recognition.md
.qoder/repowiki/en/content/Infrastructure and Architecture/: Event Processing Pipeline.md  Infrastructure and Architecture.md  Sandbox Management.md
.qoder/repowiki/en/content/MCP Server Security Analysis/: MCP Client Simulation and Tool Discovery.md  MCP Sandbox Management.md  MCP Server Security Analysis.md
.qoder/repowiki/en/content/Monitoring and Automation/: ASCII Mascot System.md  (+3 more)
.qoder/repowiki/en/meta/: repowiki-metadata.json
api/: main.py
data/: clean_packages.txt  malicious_packages.txt  signatures.json
graph/: builder.py
hooks/: install_hook.sh  shell_hook.sh
mascot/: spider.py
mcp/: client.py  features.py  sandbox.py
ml/: detector.py  model.pkl
monitor/: diff.py  ngrams.py  parser.py  sarif.py  signatures.py  timeline.py  yara.py
sandbox/: Dockerfile  sandbox.py
tests/mcp/: test_sandbox_injection.py
watcher/: session.py
(+25 files in other folders)
